# julius

./: .env  .envrc  .gitignore  flake.nix  pyproject.toml
julius/: __init__.py  main.py  schemas.py  settings.py  video_download.py
